<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_navigation_"
    app:startDestination="@id/landingFragment">

    <fragment
        android:id="@+id/landingFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.Landing.LandingFragment"
        android:label="@string/landing_fragment"
        tools:layout="@layout/fragment_landing_page"/>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/searchFriendsFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.FriendRequest.FriendsRequestFragment"
        android:label="@string/fragment_friends_request"
        tools:layout="@layout/fragment_friends_request" />

    <fragment
        android:id="@+id/friendsRequestFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.SearchFriend.SearchFriendFragment"
        android:label="@string/fragment_search_friends"
        tools:layout="@layout/fragment_search_friend" />

    <fragment
        android:id="@+id/logOutFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.LogoutFragment"
        android:label="@string/app_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>
