<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_navigation"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.SplashScreenFragment"
        android:label="@string/splash_screen_fragment"
        tools:layout="@layout/fragment_splash_screen">

        <action
            android:id="@+id/action_splashScreenFragment_to_signInFragment"
            app:destination="@id/signInFragment" />

    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.SignInFragment"
        android:label="@string/sign_in_fragment"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />

    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.northampton.friendschatbox.ui.fragment.SignUpFragment"
        android:label="@string/sign_up_fragment"
        tools:layout="@layout/fragment_sign_up">

    </fragment>

</navigation>
